--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -70,10 +70,13 @@
 }
 
 .second {
-    width: 100%;
-    height: 1000px;
-    background: #999;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 10px;
+    background-color: #f1dbcd;
+
 }
+
 
 #buscar{
     position: absolute;
@@ -122,17 +125,3 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-input[type=month] {
-    background-color: #f1dbcd;
-    padding: 11px 13px;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-    border-radius: 10px;
-}
-
-input[type=month]:focus {
-    background-color: #f8f9f0;
-    border-radius: 10px;
-    border: 3px solid #feeae0;
-}
