--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -3175,26 +3175,27 @@ fieldset[disabled] .btn-primary.focus {
 }
 .btn-success {
   color: #fff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #10c07c;
+  border-color: #10b876;
+  font-size: 175%;
 }
 .btn-success:focus,
 .btn-success.focus {
   color: #fff;
-  background-color: #449d44;
-  border-color: #255625;
+  background-color: #10b876;
+  border-color: #10c07c;
 }
 .btn-success:hover {
   color: #fff;
-  background-color: #449d44;
-  border-color: #398439;
+  background-color: #10ae6f;
+  border-color: #10c07c;
 }
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #fff;
-  background-color: #449d44;
-  border-color: #398439;
+  background-color: #10a164;
+  border-color: #10a164;
 }
 .btn-success:active:hover,
 .btn-success.active:hover,
@@ -3206,8 +3207,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
   color: #fff;
-  background-color: #398439;
-  border-color: #255625;
+  background-color: #109259;
+  border-color: #10a164;
 }
 .btn-success:active,
 .btn-success.active,
