--- a/grails-app/assets/stylesheets/style.css
+++ b/grails-app/assets/stylesheets/style.css
@@ -17,6 +17,13 @@ h1 {
   font-size: 50px;
 }
 
+h2 {
+  color: #999;
+  text-align: center;
+  font-family: 'Vibur', cursive;
+  font-size: 25px;
+}
+
 .login-form {
   width: 350px;
   padding: 40px 30px;
