--- a/grails-app/assets/stylesheets/list.css
+++ b/grails-app/assets/stylesheets/list.css
@@ -19,10 +19,10 @@
 
 .image1 {
     display: block;
-
+    height:300px;
     max-height:300px;
     width: auto;
-    height: auto;
+
 }
 
 .overlay {
@@ -35,7 +35,7 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: rgba(252, 223, 169, 0.75);
+    background-color: rgba(252, 223, 169, 0.65);
 }
 
 .container2:hover .overlay {
@@ -75,4 +75,10 @@ h2 {
     color: black;
     text-align: center;
     font-size: 20px;
+}
+
+h1 {
+    color: #f1dbcd;
+    text-align: center;
+    font-size: 15px;
 }
